--- a/sensor/weed_detection_using_EfficientNet.ipynb
+++ b/sensor/weed_detection_using_EfficientNet.ipynb
@@ -104,10 +104,10 @@
     "X = []\n",
     "Y = []\n",
     "imgSize = (224, 224)\n",
-    "\n",
+    "max_samples = 300\n",
     "for i in labels:\n",
     "  dataPath = \"/content/dataset/\" + i + \"/\"\n",
-    "  fileRead = glob.glob(dataPath + \"*\")\n",
+    "  fileRead = glob.glob(dataPath + \"*\")[:max_samples]\n",
     "  # print(fileRead)\n",
     "  print(len(fileRead))\n",
     "\n",
@@ -116,9 +116,18 @@
     "    img = cv2.resize(image, imgSize)\n",
     "    X.append(img)\n",
     "    Y.append(i)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X = np.array(X)\n",
-    "Y = np.array(Y)"
+    "Y = np.array(Y)\n",
+    "  "
    ]
   },
   {
@@ -179,6 +188,42 @@
    "outputs": [],
    "source": [
     "X_train.shape, Y_train.shape, X_test.shape, Y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.layers import GlobalAveragePooling2D\n",
+    "\n",
+    "# eliminate top layer\n",
+    "base_model = tf.keras.applications.EfficientNetB0(include_top=False, weights='imagenet', input_shape=(224, 224, 3))\n",
+    "\n",
+    "# add new classifier layer\n",
+    "x = base_model.output\n",
+    "x = GlobalAveragePooling2D()(x)\n",
+    "num_classes = Y.shape[-1] \n",
+    "output_layer = Dense(num_classes, activation='softmax')(x)\n",
+    "\n",
+    "model = Model(inputs=base_model.input, outputs=output_layer)\n",
+    "\n",
+    "\n",
+    "for layer in base_model.layers:\n",
+    "    layer.trainable = True\n",
+    "\n",
+    "\n",
+    "optimizer = tf.keras.optimizers.Adam(lr=0.001)\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# normalization\n",
+    "X_train = X_train / 255.0\n",
+    "X_test = X_test / 255.0\n",
+    "\n",
+    "# train model\n",
+    "train_history = model.fit(X_train, Y_train, validation_data=(X_test, Y_test), epochs=10, batch_size=32)\n",
+    "\n"
    ]
   }
  ],
