feat: add early stopping, check that stopping point and delete limit size

--- a/sensor/AI/weed_detection_using_AlexNet.ipynb
+++ b/sensor/AI/weed_detection_using_AlexNet.ipynb
@@ -92,10 +92,10 @@
     "X = []\n",
     "Y = []\n",
     "imgSize = (227, 227)\n",
-    "max_samples = 300\n",
+    "\n",
     "for i in labels:\n",
     "  dataPath = \"/content/dataset/\" + i + \"/\"\n",
-    "  fileRead = glob.glob(dataPath + \"*\")[:max_samples]\n",
+    "  fileRead = glob.glob(dataPath + \"*\")\n",
     "  # print(fileRead)\n",
     "  print(len(fileRead))\n",
     "\n",
@@ -145,7 +145,7 @@
     "oneHotY = []\n",
     "for i in Y:\n",
     "  oneHotY.append(labels.index(i))\n",
-    "Y = to_categorical(oneHotY)"
+    "Y = np.array(to_categorical(oneHotY))"
    ]
   },
   {
@@ -251,7 +251,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_history = model.fit(X_train, Y_train, validation_data=(X_test, Y_test), epochs=10, batch_size=32)\n",
     "import math\n",
     "num_epochs = 100\n",
     "batch_size = 32\n",
@@ -259,11 +258,15 @@
     "train_steps_per_epoch = X_train.shape[0]// batch_size\n",
     "val_steps_per_epoch = X_test.shape[0]// batch_size\n",
     "\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
+    "\n",
     "hist = model.fit(X_train, Y_train,\n",
     "                 epochs=num_epochs,\n",
     "                 batch_size=batch_size,\n",
     "                 verbose=1,\n",
-    "                 callbacks=[reduce_lr],\n",
+    "                 callbacks=[reduce_lr, early_stopping],\n",
     "                 validation_data=(X_test, Y_test))"
    ]
   },
@@ -280,7 +283,8 @@
     "val_loss = hist.history[\"val_loss\"]\n",
     "\n",
     "acc = np.array(acc).T\n",
-    "epochs = [i for i in range(1, 101)]\n",
+    "stopped_epoch = early_stopping.stopped_epoch\n",
+    "epochs = [i for i in range(1, stopped_epoch +2 )]\n",
     "plt.plot(epochs, acc, \"-r.\", label=\"Train acc\")\n",
     "plt.plot(epochs, val_acc, \"-g\", label=\"Val acc\")\n",
     "plt.title(\"Train & val acc.\")\n",
